--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
       .caption {
-        font-size: 16px;
+        font-size: 15px;
         color: rgb(70, 70, 70);
         margin-top: -2px;
         font-weight: 400;
@@ -70,6 +70,12 @@
         운동 중량과 최대 가능 반복 횟수를 입력하여, <br />1회 수행 가능한 최대
         중량(1RM)을 계산해보세요
       </p>
+      <div>
+        <img
+          src="img/1.png"
+          style="padding-bottom: 48px; display: block; margin: auto; width: 40%"
+        />
+      </div>
       <p class="caption2">중량</p>
       <p class="name">3대운동 중 하나의 <br />평소 수행 중량을 입력하세요</p>
       <input id="input1" type="text" class="box" />
